--- a/bank-system/Basic-operation/public/deposit-confirmation.html
+++ b/bank-system/Basic-operation/public/deposit-confirmation.html
@@ -47,8 +47,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/public/transaction-history.html"
+              <a class="nav-link" href="transaction-history.html"
                 >Transaction History</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="account-opening.html"
+                >Account Opening</a
               >
             </li>
           </ul>
