--- a/bank-system/Basic-operation/public/employee-transaction.html
+++ b/bank-system/Basic-operation/public/employee-transaction.html
@@ -51,6 +51,11 @@
                 >Transaction History</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="account-opening.html"
+                >Account Opening</a
+              >
+            </li>
           </ul>
         </div>
         <div class="d-flex align-items-center ms-auto gap-2">
