--- a/bank-system/Basic-operation/public/customer-onboarding-security.html
+++ b/bank-system/Basic-operation/public/customer-onboarding-security.html
@@ -161,6 +161,37 @@
                       />
                     </div>
 
+                    <!-- Bank ID Display (Always Visible) -->
+                    <div
+                      class="bank-id-display"
+                      id="bankIdDisplay"
+                      style="display: none; background: linear-gradient(135deg, #f0f7f5 0%, #e8f3f0 100%); border: 2px solid #1a6b62; border-radius: 12px; padding: 20px; margin-top: 20px;"
+                    >
+                      <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 15px;">
+                        <svg
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="#1a6b62"
+                          stroke-width="2"
+                        >
+                          <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                          <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                        </svg>
+                        <span style="font-weight: 700; color: #003631; font-size: 16px;">Your Bank ID (Save this for login):</span>
+                      </div>
+                      <div style="background: white; padding: 15px; border-radius: 8px; border: 1px solid #1a6b62;">
+                        <div class="bank-id-value" id="bankIdValue" style="font-size: 32px; font-weight: bold; color: #1a6b62; letter-spacing: 4px; text-align: center; cursor: pointer; user-select: all;">0000</div>
+                        <div style="text-align: center; margin-top: 8px; font-size: 12px; color: #666;">Click to copy</div>
+                      </div>
+                      <div style="margin-top: 12px; padding: 10px; background: #fff3cd; border-left: 4px solid #ffc107; border-radius: 4px;">
+                        <small style="color: #856404; font-size: 12px;">
+                          <strong>Important:</strong> You will need this Bank ID along with your email and password to log in. Please save it securely.
+                        </small>
+                      </div>
+                    </div>
+
                     <!-- Mock Code Display for Testing -->
                     <div
                       class="mock-code-display"
@@ -182,9 +213,12 @@
                           <polyline points="17 8 12 3 7 8"></polyline>
                           <line x1="12" y1="3" x2="12" y2="15"></line>
                         </svg>
-                        <span>Test Mode - Your Verification Code:</span>
+                        <span>Test Mode - Verification Code:</span>
                       </div>
-                      <div class="mock-code-value" id="mockCodeValue">0000</div>
+                      <div style="margin: 15px 0;">
+                        <div style="font-weight: 600; color: #003631; margin-bottom: 8px;">Verification Code:</div>
+                        <div class="mock-code-value" id="mockCodeValue" style="font-size: 24px; font-weight: bold; color: #003631; letter-spacing: 5px;">0000</div>
+                      </div>
                       <small class="mock-code-note"
                         >This is only visible in test mode. In production, codes
                         will be sent via SMS.</small
